--- a/docs/api/geojson-api.mdx
+++ b/docs/api/geojson-api.mdx
@@ -8,7 +8,7 @@ toc_max_heading_level: 4
 
 ## Introduction
 
-The **GeoJSON API** is provided as a library which can be added to any document as long as it is preceded by the mampl-viewer module, i.e.
+The **GeoJSON API** is provided as a library to convert GeoJSON to and from MapML. The GeoJSON API can be added to any document as long as it is preceded by the mampl-viewer module, i.e.
 
 ```html
 <!doctype html>
@@ -31,14 +31,18 @@ The **GeoJSON API** is provided as a library which can be added to any document 
 |----------|---------|-------------|
 |<code>geojson2mapml(<Object&nbsp;\|&nbsp;String\>&nbsp;json,&nbsp;<Object\>&nbsp;options)</code> | A MapML `<layer->` element. | Convert a GeoJSON feature or feature collection string or object to MapML `<layer->` containing one or more `<map-feature>` elements.|
 
+:::tip
+
+Check out [this application](https://maps4html.org/experiments/api/custom-map-ui/geoname-search-ui.html) using the geojson2mapml API!
+
+:::
+
 ### Parameters
 
 | Parameter | Description |
 |------|---------------------|
-| <String&nbsp;\|&nbsp;Object>&nbsp;json | A GeoJSON string or object |
+| <String&nbsp;\|&nbsp;Object>&nbsp;json | A GeoJSON string or object. |
 | &ltObject&gt options | A set of key/value pairs that customize the output MapML layer. All options are optional and described below. |
-
----
 
 ### Options
 
@@ -48,26 +52,36 @@ The **GeoJSON API** is provided as a library which can be added to any document 
 |------|------|---------------|--------|
 | `label` | <String\> | `json.name`, `json.title` or "Layer" | Sets the output layer's [label](http://localhost:3000/web-map-doc/docs/layers/layer/#label). |
 | `projection` |  <String\> | `OSMTILE` | Sets the output layer's [projection](http://localhost:3000/web-map-doc/docs/elements/mapml-viewer/#projection). Defined values include: `OSMTILE`, `CBMTILE`, `WGS84`, and `APSTILE`.|
-| `caption` | <String&nbsp;\|&nbsp;Function\> | _No caption_ | A function that accepts the feature JSON and returns a string, OR a string that is the name of a property to be mapped to the [featurecaption](http://localhost:3000/web-map-doc/docs/elements/feature/#map-featurecaption). If a matching property is not found, the string provided will be used as the feature caption value. See [caption option <Function\> example](#caption-option)|
-| <span id="option-properties">`properties`</span> | <Function&nbsp;\|&nbsp;String&nbsp;\|&nbsp;HTMLElement\> | _Properties will be mapped to an HTML [table](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table)._ | Specifies how the properties are mapped. <Function\> - A function that accepts one argument - the GeoJSON feature object - and which must return an HTMLElement that becomes the single child element of the <properties\> element. <String\> - A string that will be parsed and used as the single child element of the `<properties>` element for all features. <HTMLElement\> - an element that will be used as the single child element of `<properties>` element for all features. See [properties option <Function\> example](#properties-option)|
-| `geometryFunction` | <Function\> | _MapML geometry will mirror the GeoJSON geometry value_ | <Function\> A function to modify the generated [descendants](http://localhost:3000/web-map-doc/docs/elements/geometry/#child-elements) of `<map-geometry>` which can add classes, [hyperlinks](http://localhost:3000/web-map-doc/docs/other-elements/map-a/) and [span's](http://localhost:3000/web-map-doc/docs/other-elements/span/) to the instance. Plain `<map-geometry>` element will be created by default. The function accepts two arguments: The generated [child element](http://localhost:3000/web-map-doc/docs/elements/geometry/#child-elements) of `<map-geometry>` and the [feature json object](https://www.rfc-editor.org/rfc/rfc7946#section-3.2) to return a modified child element of the `<map-geometry>` element. See the [geometryFunction example](#geometry-option) |
+| `caption` | <String&nbsp;\|&nbsp;Function\> | Uses the `label` value | A function that accepts the feature JSON and returns a string, OR a string that is the name of a property to be mapped to the [featurecaption](http://localhost:3000/web-map-doc/docs/elements/feature/#map-featurecaption). If a matching property is not found, the string provided will be used as the feature caption value. See [basic options usage](#basic-options-usage) for an example. |
+| <span id="option-properties">`properties`</span> | <Function&nbsp;\|&nbsp;String&nbsp;\|&nbsp;HTMLElement\> | _Properties will be mapped to an HTML [table](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table)._ | Specifies how the properties are mapped. <Function\> - A function that accepts one argument - the GeoJSON feature object - and which must return an HTMLElement that becomes the single child element of the <properties\> element. <String\> - A string that will be parsed and used as the single child element of the `<properties>` element for all features. <HTMLElement\> - an element that will be used as the single child element of `<properties>` element for all features. See [basic options usage](#basic-options-usage) for an example.|
+| `geometryFunction` | <Function\> | _MapML geometry will mirror the GeoJSON geometry value_ | <Function\> A function to modify the generated [descendants](http://localhost:3000/web-map-doc/docs/elements/geometry/#child-elements) of `<map-geometry>` which can add classes, [hyperlinks](http://localhost:3000/web-map-doc/docs/other-elements/map-a/) and [span's](http://localhost:3000/web-map-doc/docs/other-elements/span/) to the instance. Plain `<map-geometry>` element will be created by default. The function accepts two arguments: The generated [child element](http://localhost:3000/web-map-doc/docs/elements/geometry/#child-elements) of `<map-geometry>` and the [feature json object](https://www.rfc-editor.org/rfc/rfc7946#section-3.2) to return a modified child element of the `<map-geometry>` element. See [basic options usage](#basic-options-usage) for an example. |
 
-
+---
 ### Examples
 
-<div id="label-option"></div>
+#### Basic options usage
+
+Showcasing how use each option.
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+<Tabs>
+<TabItem value="label" label="label">
 
 ```js title="geojson2mapml label option"
 geojson2mapml(json, {label: "Downtown Ottawa"});
 ```
 
-<div id="projection-option"></div>
+</TabItem>
+<TabItem value="projection" label="projection">
 
-```js  title="geojson2mapml projection option"
+```js title="geojson2mapml projection option"
 geojson2mapml(json, {projection: "CBMTILE"});
 ```
 
-<div id="caption-option"></div>
+</TabItem>
+<TabItem value="caption" label="caption">
 
 ```js title="geojson2mapml caption option - function-valued"
 // caption function
@@ -79,9 +93,10 @@ geojson2mapml(json, {caption: function(feature) {
 geojson2mapml(json, {caption: "desc"});
 ```
 
-<div id="properties-option"></div>
+</TabItem>
+<TabItem value="properties" label="properties">
 
-```js  title="geojson2mapml properties option - function-valued"
+```js title="geojson2mapml properties option - function-valued"
 // properties function
 geojson2mapml(json, {properties: function(feature) {
     let parser = new DOMParser();
@@ -92,7 +107,8 @@ geojson2mapml(json, {properties: function(feature) {
 geojson2mapml(json, {properties: "<p>This property was inserted using a properties string</p>"});
 ```
 
-<div id="geometry-option"></div>
+</TabItem>
+<TabItem value="geometryFunction" label="geometryFunction">
 
 ```js title="geojson2mapml geometryFunction option"
 let options = {
@@ -102,6 +118,9 @@ let options = {
               };
 geojson2mapml(json, options);
 ```
+
+</TabItem>
+</Tabs>
 
 #### Options string
 An example showcasing how strings can be used to set `label`, `projection`, `caption` and `properties` options.
@@ -261,14 +280,26 @@ let output = geojson2mapml(json);
 
 | Function | Returns | Description |
 |----------|---------|-------------|
-| <code>mapml2geojson(<HTMLLayerElement\>&nbsp;element,&nbsp;<Object\>&nbsp;options)</code> | A JavaScript (GeoJSON) feature collection object | This function transforms the `<feature>` element children of a `<layer->` element to a GeoJSON FeatureCollection object. You supply [options](#options-1) to control the transformation.
+| <code>mapml2geojson(<HTMLLayerElement\>&nbsp;element,&nbsp;<Object\>&nbsp;options)</code> | A JavaScript (GeoJSON) feature collection object | This function transforms the `<feature>` element children of a `<layer->` element to a GeoJSON FeatureCollection object. You supply [options](#options-1) to control the transformation. This function must be used inside a windows.onload event.
+
+:::caution
+
+`mapml2geojson` must be called inside a windows.onload event to work properly. i.e.
+
+``` js
+window.onload = (event) => {
+  mapml2geojson(json);
+};
+```
+
+:::
 
 ### Parameters
 
-| Parameter | Default | Description |
-|------|-------|--------------|
-| <HTMLLayerElement\> element | _n/a_ | A `<layer->` element |
-| <Object\>&nbsp;options | _n/a_ | You supply parameters via an options object with [predefined option names](#options-1). |
+| Parameter | Description |
+|------|--------------|
+| <HTMLLayerElement\> element | A `<layer->` element. |
+| <Object\>&nbsp;options | You supply parameters via an options object with [predefined option names](#options-1). |
 
 ### Options
 
@@ -291,3 +322,66 @@ so the resulting JSON SHOULD (somehow, tbd) be tagged with the datum in use by t
 the layer.
 
 ---
+### Examples
+
+#### Default options
+An example showcasing default GeoJSON output when no options are provided.
+``` html
+<layer- label="Point Geometry" checked="">
+   <map-meta name="extent" content="top-left-longitude=-75.916809, top-left-latitude=45.886964, bottom-right-longitude=-75.516809,bottom-right-latitude=45.26964"></map-meta>
+   <map-meta name="projection" content="OSMTILE"></map-meta>
+   <map-meta name="cs" content="gcrs"></map-meta>
+   <map-feature>
+      <map-featurecaption>Point Geometry</map-featurecaption>
+      <map-geometry>
+         <map-point>
+            <map-coordinates>-75.6916809 45.4186964</map-coordinates>
+         </map-point>
+      </map-geometry>
+      <map-properties>
+         <table>
+            <thead>
+               <tr>
+                  <th role="columnheader" scope="col">Property name</th>
+                  <th role="columnheader" scope="col">Property value</th>
+               </tr>
+            </thead>
+            <tbody>
+               <tr>
+                  <th scope="row">prop0</th>
+                  <td itemprop="prop0">This is a Point</td>
+               </tr>
+            </tbody>
+         </table>
+      </map-properties>
+   </map-feature>
+</layer->
+<script>
+window.onload = (event) => {
+   let output = mapml2geojson(document.querySelector('layer-'))
+};
+</script>
+```
+
+<details>
+<summary>Click to view the output GeoJSON</summary>
+
+``` js
+{
+ "title": "Point Geometry",
+ "bbox": [-75.916809, 45.886964, -75.516809, 45.26964],
+ "type": "FeatureCollection",
+ "features": [{
+     "type": "Feature",
+     "geometry": {
+         "type": "Point",
+         "coordinates": [-75.6916809, 45.4186964]
+     },
+     "properties": {
+         "prop0": "This is a Point"
+     }
+ }]
+}
+```
+
+</details>
