Translate sidebar page titles to fr locale

--- a/i18n/fr/docusaurus-plugin-content-docs/current.json
+++ b/i18n/fr/docusaurus-plugin-content-docs/current.json
@@ -8,7 +8,7 @@
     "description": "The label for category Getting Started in sidebar sidebar"
   },
   "sidebar.sidebar.category.Mapping Elements": {
-    "message": "Éléments de cartographie",
+    "message": "Éléments de cartes Web",
     "description": "The label for category Mapping Elements in sidebar sidebar"
   },
   "sidebar.sidebar.category.API": {
