--- a/i18n/fr/docusaurus-plugin-content-docs/current/api/geojson-api.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/api/geojson-api.mdx
@@ -1,6 +1,6 @@
 ---
 id: geojson-api
-title: GeoJSON API
+title: API GeoJSON
 slug: /api/geojson-api
 # Display h2 to h4 headings
 toc_max_heading_level: 4
